# CAL_TP

./: README.md
TPs/TP1/cal_fp01_CLion/: main.cpp
TPs/TP1/cal_fp01_CLion/Tests/: Factorial.cpp  Partitioning.cpp  Sum.cpp  tests.cpp
TPs/TP2/: CMakeLists.txt
TPs/TP2/Tests/: Labirinth.cpp  Sudoku.cpp  Sudoku.h  tests.cpp
TPs/TP3/cal_fp03_CLion/Tests/: NearestPoints.cpp  Point.cpp  tests.cpp
